# countrymark-sdk

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  run.vbs  run_turbodc.bat
flowserve_sdk/: config1.yaml
queries/: fetch.sql
sme_sdk/: config2.yaml
